Bug 60828 - FORMATTING: Conditional formatting copied unwillingly
Summary: FORMATTING: Conditional formatting copied unwillingly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.1.0 target:4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-14 08:58 UTC by Bob van der Klaauw
Modified: 2013-02-26 11:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bob van der Klaauw 2013-02-14 08:58:19 UTC
Problem description:
When there's a set of data with conditional formatting, this formatting is coppied to a new column when inserting one. This conditional formatting doesn't show up in de "manage conditional formatting"-window.

Steps to reproduce:
1. Apply conditional formatting
2. Insert a column after
3. Set data conforming to the conditions of the formatting

Current behavior:
The data takes over the formatting of the previous column, but doesn't show up in the conditional formatting manager. Changing the range to include and then exclude the new column doesn't change anything. Clearing direct formatting does, but also clears all other formatting. 

Expected behavior:
First I would prefer that the new inserted cells do not take over the formatting without a notice. I would like to be albe to select what type of formatting is to be transferred to the new cell(s), but that's just a preference, not a bug. I then would expect the conditional formatting manager to update to the new data set and correct it there. 
              
Operating System: Windows 8
Version: 4.0.0.3 release
Comment 1 Markus Mohrhard 2013-02-14 14:20:01 UTC
Can you please attach a test document and a step-by-step instruction how to reproduce it with the test document. Thanks!
Comment 2 Not Assigned 2013-02-20 15:29:15 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2bc95ebcb9ac66b32ea03f3ccd5996304e910fa1

automatically extending cond formats is dangerous, fdo#60828



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2013-02-26 07:34:00 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5b14af735a87ef5b38909f443465c123591c74fa&h=libreoffice-4-0

automatically extending cond formats is dangerous, fdo#60828


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2013-02-26 11:38:15 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f5ad437835822cdcb6d46b1c468d7d9ca52e1ea&h=libreoffice-4-0-1

automatically extending cond formats is dangerous, fdo#60828


It will be available already in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.