automatically extending cond formats is dangerous, fdo#60828

Change-Id: I45549e163f21550e879a171d80e836b6df3dd2cc
Reviewed-on: https://gerrit.libreoffice.org/2410
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>